# OpenSourceLabs

./: README.md  bio.md
ComputationLab/: lab7.md  plot_words.py
lab1/: lab01.md
lab3/: lab3.md
lab4/: lab4.md
lab5/: CMakeCache.txt  Makefile  Shared  Static  cmake_install.cmake  lab5.md
lab5/source/: CMakeLists.txt
lab6/: Lab6.md
lab8/: lab8.md
lab9/: change.py  clothing.py  tab9.md
